# Apna-Parivar-Team-43

./: .dockerignore  .env.example  .gitignore  ADMIN_LOGIN_FIX_SUMMARY.md  API_TESTING_GUIDE.md  AUTH_QUICK_REFERENCE.md  AUTH_REDESIGN_STATUS.md  BACKEND_FILES_STRUCTURE.md  BACKEND_IMPLEMENTATION.md  BACKEND_READY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_DEPLOYMENT_GUIDE.md  Dockerfile.backend  Dockerfile.frontend  FIX_NOW.md  FIX_RLS_RECURSION.md  FRONTEND_AUTH_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  MAGIC_LINKS_READY.md  MAGIC_LINK_QUICK_REFERENCE.md  README.md  SECURITY.md  SETUP.md  SIGNUP_LOGIN_COMPLETE.md  SQL_SCRIPTS.md  USER_CREATION_ON_LOGIN_FIX.md  docker-compose.yml
.github/: repo.yml
backend/: .env.example  Dockerfile  README.md  __init__.py  app.py  main.py  pyproject.toml  requirements.txt  setup.sh
backend/core/: config.py  database.py  security.py
backend/routers/: auth_new_router.py  auth_router.py  family_member_router.py  family_router.py  health_router.py  user_router.py
backend/schemas/: user.py
backend/services/: admin_onboarding_service.py  family_member_service.py  family_service.py  user_service.py
backend/sql/: rls_policies.sql  schema.sql
docs/: AUTHENTICATION_ADDED.md  AUTHENTICATION_GUIDE.md  AUTH_CONTEXT_MIGRATION.md  AUTH_IMPLEMENTATION_SUMMARY.md  AUTH_QUICK_START.md  AUTH_SYSTEM_REDESIGN.md  BULK_IMPORT_AND_ADMIN_MEMBER.md  BULK_IMPORT_QUICK_START.md  Basic.md  CHANGELOG.md  CHANGES_SUMMARY.md  COMMIT_SUMMARY.md  CO_ADMIN_INVITE_401_500_FIX.md  CO_ADMIN_INVITE_FIX.md  (+19 more)
(+48 files in other folders)
